  22 Apr 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  qutip-4.1.0.ebuild:
  dev-python/qutip: download from github  releases on their web page are not
  properly numbered, breaking checksums

*qutip-4.1.0 (14 Mar 2017)

  14 Mar 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +metadata.xml, +qutip-4.1.0.ebuild:
  dev-python/qutip: new ebuild