@@ -2,21 +2,22 @@
 Hash: SHA256
 
 DIST qutip-4.1.0.tar.gz 404027 SHA256 e4800077d395a231ada98eeb6e63b131d2c4c00882b177ec42eb314ac97367ee SHA512 1104f53e4b45ddaa20f9799f7cb93c229a5d51374f56adc3f19baec49d48b31462a8f79ce8d9fe60e6fe44d075e71e95a84ac73136d0694980c8c19ae16c89f7 WHIRLPOOL 0c0fdf4bf11d253ff4b4b2fedc75db8d512b2314823ce78738c42debddd139c9f768b4fb57996ccc2607aa69c489de235642e5510f6dd136eb80f0684370506f
+DIST qutip-4.1.2.tar.gz 404093 SHA256 a965b237c573cf1b1acaca313f6a848513b0240b72e1f99e77a4c8d5386f7e82 SHA512 4e7ef95766767fd9a49db6c64db41bf20d9d8bef96ad3895dc26f64d9734ed093cc6fe2ae569eef0b70655808d2bda27a342022f7b1873a7cd6f15718f109064 WHIRLPOOL 1cbb608d1929898bac74f3cc39fa132ad044b714ce77fa5119920628890511dab2f1e429241be480a46fba7f7b63a3c34c47fc1e31ef6b48ae06d000a8855ad9
 -----BEGIN PGP SIGNATURE-----
 
-iQKTBAEBCAB9FiEERMkDQjkszrVa22ISLwTjHwcgHn0FAlj7cV9fFIAAAAAALgAo
+iQKTBAEBCAB9FiEERMkDQjkszrVa22ISLwTjHwcgHn0FAlj7cchfFIAAAAAALgAo
 aXNzdWVyLWZwckBub3RhdGlvbnMub3BlbnBncC5maWZ0aGhvcnNlbWFuLm5ldDQ0
 QzkwMzQyMzkyQ0NFQjU1QURCNjIxMjJGMDRFMzFGMDcyMDFFN0QACgkQLwTjHwcg
-Hn1vQxAAsLuATOkoHzsMc15K6+vEVZ4cgZC7SeI62Fhynr6tWuZYUpJqGCXRp/h8
-r/MrAtcc3k0UYDFbsC4ejEqVRu0ZvRo76RsPbtluM01HRQb8CuQCWS3SPAE3W8dg
-vkB0nb9kdcrkjjCobnUyQ4cHBpj4a0HrLGT8bI+PqT94L5Le8K7rsue+c9Q28/zh
-e0vnEP3VdjZ6dSDETkRI8uCtGmJhT2tzV2zhu11nCyFSHTE9gSOIntXjCXAiSBoB
-03gGTvwIw7vPqHhWjc21a0nUBx2PRvLcnjyt9bHiodVsw8EZ415M78nARWgu5Qvy
-1f9wovxMyqYwwW0Uh9cyQr6Tp1EH0hN0PMbgLGmvsTOE+mZJ/ZY7FHVdBktaJjql
-C8PUHHViSTw180Kka+prWTektoURrjS1AhP5fsziFpuTiPL0qoSW4K5pms2bP3Me
-Jnl2WpzmfVWj7s9X7l8zEPwGsruE2/nwTNpKN5BNdRTw+rZFbi+NEBkvkh4QaRGl
-BjMRdK2W1Wsbs9tbNSyZO/72NlmpvZDeyict/W/I6RNDcJrSSRfStUIHEyxshD3U
-Drh8xy/QfPwVnHFiPf+4JOWB9azZbodxlQfQLFGM5wlT76dRZ1apIPLlparak98C
-j/Ty32cxax19dT7kXRY4gIS/1ABeWvDti1jC7LJ0eWLjxFeCZuQ=
-=5wbA
+Hn0rCBAAxy6B5UYDvhKj17AkUJ73Yp0YhSEmawFgQl33Q4eIr4tNKyW5hhAwqMKp
+AplsZFIEmz7s62c6RqBRtM5FD8T6q8f1mnrHwcNHt36IPhTOV0R7dQZCku1HfB+c
++qbHF85CSmLq8wkCPvXxu3zp0C6hV/TSRwmU6p6vu9WKqe5bHu4Sa5AFxg8+XFKX
+UXAdnRm8JsCQmmYzZ/N9+FH/w6F3hEXMqQPRkD1MXr8CA4WR77DOJJ1k70WT/tg/
++aexCgjUZhHRbuYJbi5P6+z5Wg67BwzgeKCPuD+anfE8ZqsGSsPMZV4b462wQBsm
+nmnGhrs4NXqNXez5XlGitl8eGDdSRe+U7mSigAnc4dJXmxicU7UruvSURtVQDrLE
+xisKc361dIImzftG9O3rNL0K+dCo4qnA98bel1QSADw9cYI6w8JTUNi/SHfpJisF
+l0yqZ4IM1dGO7XO73bK6qOU3vdQ6G59oDzI8vyRzwwp73XDcJcGUA5fn3I4DLwOY
+AjHkcoZGFfbPBVs3s7C4nrZxTULT1SMqOHg7sJ/6G84OuzaYHMza+3KQEPLIuAMP
+bS5b5Pfe7yFph99CWMqCm8krpz5c4WQ8y3qQkgRM3F/L53wfbba0X2coGWJZqvBl
+aDF0PjdnryMrc/bZ1jIpF3ZK+53u7aMB1xVUZ9v/bMyU31r5A+c=
+=RoIj
 -----END PGP SIGNATURE-----
