@@ -1,3 +1,9 @@
+*qutip-4.1.2 (22 Apr 2017)
+
+  22 Apr 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  +qutip-4.1.2.ebuild:
+  dev-python/qutip: version bump
+
   22 Apr 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
   qutip-4.1.0.ebuild:
   dev-python/qutip: download from github  releases on their web page are not
